fix(PreviewPersonalInfoPanel): fix the overflow of the contact info div
The contact list had a grid layout fix a fixed number of columns.

Depending on the non-empty contact items, they would overflow.

Now, the number of columns has been set based on the number of
non-empty contact elements. If the contact list div overflows, the
number of columns has been halved.

--- a/src/styles/preview/PreviewPersonalInfoPanel.css
+++ b/src/styles/preview/PreviewPersonalInfoPanel.css
@@ -25,10 +25,12 @@
   padding: var(--preview-contacts-padding);
 
   display: grid;
-  grid-template-columns: repeat(3, max-content);
+  grid-template-columns: repeat(var(--preview-contacts-cols), max-content);
   grid-auto-rows: auto;
-  grid-gap: var(--preview-contacts-gap);
+  gap: var(--preview-contacts-gap);
   justify-content: space-around;
+
+  overflow: hidden;
 }
 
 .preview-personal-info-panel .full-name {
